--- a/SKILLUP_3.ipynb
+++ b/SKILLUP_3.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "kSLyPXvdQk22",
         "colab": {
@@ -100,7 +100,7 @@
       "metadata": {
         "id": "ZeZvFvONR_yj"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
       "metadata": {
         "id": "dmrnOXPtSJnI"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
       "metadata": {
         "id": "Id3dKrs5UVtF"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +159,7 @@
       "metadata": {
         "id": "0e-CBp3ASdGZ"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "R8fo-Qu_SkY4"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,7 +198,7 @@
       "metadata": {
         "id": "j1a1x8gVSr9J"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -283,7 +283,9 @@
             "Epoch 28/50\n",
             "469/469 [==============================] - 4s 9ms/step - loss: 0.0673 - val_loss: 0.0675\n",
             "Epoch 29/50\n",
-            "231/469 [=============>................] - ETA: 2s - loss: 0.0672"
+            "469/469 [==============================] - 6s 12ms/step - loss: 0.0673 - val_loss: 0.0675\n",
+            "Epoch 30/50\n",
+            "216/469 [============>.................] - ETA: 2s - loss: 0.0672"
           ]
         }
       ]
@@ -329,7 +331,7 @@
         "id": "GScRudPcXEkX",
         "outputId": "373bc7a5-a855-4860-c1bb-a7770170c3d0"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -375,7 +377,7 @@
         "id": "AhZKCy6vUnWq",
         "outputId": "4ac0bc84-8721-4188-ae68-487de6234b97"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
